Add input.txt