@@ -1,71 +1,50 @@
 package com.soliman;
 
-import java.util.Map;
-import java.util.Set;
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.IOException;
+import java.util.*;
 
 import org.jgrapht.graph.DefaultDirectedWeightedGraph;
 
 public class App 
 {
-    public static void main(String[] args) {
-        var graph = new DefaultDirectedWeightedGraph<String, LabeledEdge<DoubleCost>>(null, null);
-/*
-        graph.addVertex("s");
-        graph.addVertex("1");
-        graph.addVertex("2");
-        graph.addVertex("3");
-        graph.addVertex("4");
-        graph.addVertex("5");
-        graph.addVertex("6");
-        graph.addVertex("7");
-        graph.addVertex("8");
-        graph.addVertex("9");
-        graph.addVertex("y1");
-        graph.addVertex("y2");
-        graph.addVertex("y3");
+    public static void main(String[] args){
+        
+        DefaultDirectedWeightedGraph<String, LabeledEdge<DoubleCost>> graph = new DefaultDirectedWeightedGraph<>(LabeledEdge.class);
 
-        graph.addEdge("s", "1", new LabeledEdge<>(new DoubleCost(1, 2)));
-        graph.addEdge("s", "2", new LabeledEdge<>(new DoubleCost(3, 1)));
-        graph.addEdge("s", "3", new LabeledEdge<>(new DoubleCost(1, 3)));
-        graph.addEdge("1", "4", new LabeledEdge<>(new DoubleCost(2, 1)));
-        graph.addEdge("1", "5", new LabeledEdge<>(new DoubleCost(1, 2)));
-        graph.addEdge("2", "5", new LabeledEdge<>(new DoubleCost(2, 1)));
-        graph.addEdge("2", "6", new LabeledEdge<>(new DoubleCost(2, 1)));
-        graph.addEdge("3", "6", new LabeledEdge<>(new DoubleCost(1, 2)));
-        graph.addEdge("4", "7", new LabeledEdge<>(new DoubleCost(5, 7)));
-        graph.addEdge("5", "7", new LabeledEdge<>(new DoubleCost(1, 3)));
-        graph.addEdge("5", "8", new LabeledEdge<>(new DoubleCost(1, 1)));
-        graph.addEdge("6", "8", new LabeledEdge<>(new DoubleCost(5, 2)));
-        graph.addEdge("6", "9", new LabeledEdge<>(new DoubleCost(2, 4)));
-        graph.addEdge("7", "y1", new LabeledEdge<>(new DoubleCost(1, 4)));
-        graph.addEdge("7", "y2", new LabeledEdge<>(new DoubleCost(8, 7)));
-        graph.addEdge("8", "y2", new LabeledEdge<>(new DoubleCost(5, 7)));
-        graph.addEdge("8", "y3", new LabeledEdge<>(new DoubleCost(3, 2)));
-        graph.addEdge("9", "y3", new LabeledEdge<>(new DoubleCost(1, 2)));
+        String startNode = "";
+        Set<String> endNodes = new HashSet<>();
+        boolean directional = true;
 
-        var solutionPath = Moa.search(graph, "s", Set.of("y1","y2","y3"), new DoubleCost(0, 0), App::heuristicFunction);
-*/     
-        graph.addVertex("s");
-        graph.addVertex("1");
-        graph.addVertex("2");
-        graph.addVertex("3");
-        graph.addVertex("4");
-        graph.addVertex("5");
-        graph.addVertex("y");
+        try (BufferedReader reader = new BufferedReader(new FileReader("input.txt"))) {
+            startNode = reader.readLine().split(":")[1].trim();
+            endNodes = new HashSet<>(Arrays.asList(reader.readLine().split(":")[1].trim().split(", ")));
+            directional = reader.readLine().split(":")[1].trim().equalsIgnoreCase("S");
 
-        graph.addEdge("s", "1", new LabeledEdge<>(new DoubleCost(1, 3)));
-        graph.addEdge("s", "2", new LabeledEdge<>(new DoubleCost(2, 1)));
-        graph.addEdge("s", "3", new LabeledEdge<>(new DoubleCost(2, 4)));
-        graph.addEdge("2", "1", new LabeledEdge<>(new DoubleCost(2, 1)));
-        graph.addEdge("1", "4", new LabeledEdge<>(new DoubleCost(1, 1)));
-        graph.addEdge("3", "5", new LabeledEdge<>(new DoubleCost(1, 1)));
-        graph.addEdge("4", "y", new LabeledEdge<>(new DoubleCost(4, 6)));
-        graph.addEdge("5", "y", new LabeledEdge<>(new DoubleCost(3, 5)));
-
-        var solutionPath = Moa.search(graph, "s", Set.of("y"), new DoubleCost(0, 0), App::heuristicFunction);
-
-        int i = 1;
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if(line.isBlank()) continue;
+                String[] parts = line.split(" - ");
+                String source = parts[0];
+                String[] costs = parts[1].replace("(", "").replace(")", "").split(" ");
+                double cost1 = Double.parseDouble(costs[0]);
+                double cost2 = Double.parseDouble(costs[1]);
+                String target = parts[2];
+                graph.addVertex(source);
+                graph.addVertex(target);
+                graph.addEdge(source, target, new LabeledEdge<>(new DoubleCost(cost1, cost2)));
+                if(!directional){
+                    graph.addEdge(target, source, new LabeledEdge<>(new DoubleCost(cost1, cost2)));
+                }
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        
+        var solutionPath = Moa.search(graph, startNode, endNodes, new DoubleCost(0, 0), App::heuristicFunction);
         System.out.println();
+        int i = 1;
         for (var endNode : solutionPath.keySet()) {
             for (var path : solutionPath.get(endNode)) {
                 System.out.println(path.toString("P" + i + "*"));
@@ -79,7 +58,7 @@ public class App
         String minNode = null;
         double minCost = Double.POSITIVE_INFINITY;
         for (String node : ND) {
-            int actualMin = Integer.MAX_VALUE;
+            double actualMin = Integer.MAX_VALUE;
             for (var path : label.get(node)) {
                 DoubleCost cost = path.cost();
                 if (cost.sum() < actualMin) actualMin = cost.sum();
